meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/mar/snapshots/memfaultd__mar__manifest__tests__correct_os_info_read.snap
---
source: memfaultd/src/mar/manifest.rs
expression: producer
snapshot_kind: text
---
{
  "id": "memfaultd",
  "version": "[version]",
  "os_version": "OsRelease",
  "os_name": "OsType"
}
